# system-architect-agent

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  settings.py
output/: stocks_intraday_app_architect_report.txt
src/agents/: __init__.py  base_agent.py  gemini_recommendations_agent.py  groq_reasoning_agent.py
src/models/: __init__.py  model_factory.py
src/tools/: __init__.py  architecture_analyzer.py  cost_estimator.py  security_checker.py  tech_stack_recommender.py
src/utils/: __init__.py  helpers.py
src/workflow/: __init__.py  graph.py  state.py
ui/: app.py
ui/components/: chat_interface.py  progress_tracker.py  sidebar.py
